syntax = "proto2";

package tutorial;

option java_package = "com.example.tutorial";
option java_outer_classname = "HamburgStreetTreeProtos";

message HamburgStreetTreeDatabase {
    repeated HamburgStreetTree trees = 1;
}

message HamburgStreetTree {
    required string gmlId = 1;
    required string objectId = 2;
    required int32 baumId = 3;
    optional string gattung = 4;
    optional string gattungLatein = 5;
    optional string gattungDeutsch = 6;
    optional string art = 7;
    optional string artLatein = 8;
    optional string artDeutsch = 9;
    required int32 pflanzjahr = 10;
    required string kronendurchmesser = 11;
    required string kronendmzahl = 12;
    required int32 stammumfang = 13;
    required string stammumfangzahl = 14;
    optional string strasse = 15;
    optional string hausnummer = 16;
    required int32 ortsteil_nr = 17;
    optional int64 stand_bearbeitung = 18;
    required string bezirk = 19;
    required string srsName = 20;
    required string srsDimension = 21;
    required string pos = 22;

}
